5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_2704.log
== TEST (2019-04-10 23:09:27) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem: (a/x)+x string("S")
else:
	   mensagem: a string("N")
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem: (a/x)+x string("S")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:41) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem: (a/x)+x S"
else:
	   mensagem: a "N"
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem: (a/x)+x S"
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:45) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem: (a/x)+x "S"
else:
	   mensagem: a "N"
print(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem: (a/x)+x "S"
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:09:59) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem: (a/x)+x 
else:
	   mensagem: a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:10:15) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem: (a/10)+a 
else:
	   mensagem: a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:10:26) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:11:40) 
-- CODE:
a = float(input())
b = input("S,N"รง)
if (a >= 6):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- EXECUTION TIME:
0.133403
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 2
    b = input("S,N"\xe7)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:11:42) 
-- CODE:
a = float(input())
b = input("S,N")
if (a >= 6):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- EXECUTION TIME:
0.164029
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:13:18) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N):
	   mensagem = a 
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else (a == N):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:13:29) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N):
	   mensagem = a 
print(mensagem)

-- EXECUTION TIME:
0.18487
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    else (a == N):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:13:34) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N):
	   mensagem = a 
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else (a == N):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:13:55) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N)
	   mensagem = a 
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else (a == N)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:13:58) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N)
	   mensagem = a 
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else (a == N)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:14:21) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N):
	   mensagem = a 
print(mensagem)

-- EXECUTION TIME:
0.205271
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 5
    else (a == N):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:14:22) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else (a == N):
	   mensagem = a 
print(mensagem)

-- ERROR:
File "XXXX", line 5
    else (a == N):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:14:29) 
-- CODE:
a = float(input())
b = input("S,N")
if (a == S):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (a == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:14:47) 
-- CODE:
a = float(input())
b = input("S,N")
if (b == S):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:16:32) 
-- CODE:
a = float(input())
b = input("S,N")
if (b == S):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:16:45) 
-- CODE:
a = float(input())
b = input("S,N")
if (b == S):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (b == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 23:16:59) 
-- CODE:
a = float(input())
b = input("S,N")
if (b == "S"):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 23:17:07) 
-- CODE:
a = float(input())
b = input("S,N")
if (b == "S"):
	   mensagem = (a/10)+a 
else:
	   mensagem = a 
print(mensagem)

-- EXECUTION TIME:
0.161331
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
